syntax = "proto3";

package tab;

option go_package = "internal/proto/tab";

service TabGenerate {
    rpc GenerateTab (TabRequest) returns (TabResponse);
}

message TabRequest {
    repeated AudioChunk chunks = 1;
}

message AudioChunk {
    float start_time = 1;
    bytes audio_data = 2;
}

message TabResponse {
    string tab = 1;
}
